chore: clean up repo, move scripts to extras, refine gitignore, finalize render readiness