@@ -11,9 +11,8 @@ import java.util.Map;
 
 /**
  * Configuration for the Decision Engine.
- * Selects the active routing strategy based on application properties.
- *
- * Doc 07: "Only the routing strategy will change between experiments."
+ * Selects the active routing strategy based on application.properties,
+ * then wraps it in a RoutingEngineManager to allow hot-swapping at runtime.
  */
 @Configuration
 public class DecisionEngineConfig {
@@ -23,17 +22,29 @@ public class DecisionEngineConfig {
     @Value("${nexusai.routing.strategy:ADAPTIVE}")
     private String strategyName;
 
-    @Value("${nexusai.routing.static.provider:gemini}")
+    @Value("${nexusai.routing.static.provider:}")
     private String staticProvider;
 
-    @Value("${nexusai.routing.static.model:gemini-2.5-flash}")
+    @Value("${nexusai.routing.static.model:}")
     private String staticModel;
 
     @Value("${nexusai.routing.linucb.alpha:1.0}")
     private double linucbAlpha;
 
+    /**
+     * Builds the initial engine from config, then wraps it in a RoutingEngineManager.
+     * The RoutingEngineManager is what all services receive as their DecisionEngine —
+     * it delegates to the active inner engine and allows hot-swapping at runtime.
+     */
     @Bean
-    public DecisionEngine decisionEngine(ReputationService reputationService) {
+    public RoutingEngineManager decisionEngine(
+            ReputationService reputationService,
+            com.llm.nexusai_gateway.Agent.FeedbackLogRepository feedbackLogRepository,
+            com.llm.nexusai_gateway.Tenant.TenantRegistry tenantRegistry,
+            com.llm.nexusai_gateway.Context.ContextExtractor contextExtractor,
+            LinUcbStateRepository stateRepository,
+            com.fasterxml.jackson.databind.ObjectMapper objectMapper) {
+
         RoutingStrategy strategy;
         try {
             strategy = RoutingStrategy.valueOf(strategyName.toUpperCase());
@@ -42,20 +53,26 @@ public class DecisionEngineConfig {
             strategy = RoutingStrategy.ADAPTIVE;
         }
 
-        DecisionEngine engine = switch (strategy) {
-            case STATIC -> new StaticDecisionEngine(staticProvider, staticModel, reputationService);
+        // Build the initial engine from application.properties
+        DecisionEngine initialEngine = switch (strategy) {
+            case STATIC     -> new StaticDecisionEngine(staticProvider, staticModel, reputationService);
             case RULE_BASED -> new RuleBasedDecisionEngine(reputationService);
-            case WEIGHTED -> new WeightedDecisionEngine(
-                Map.of(
-                    "gemini:gemini-2.5-flash", 0.4,
-                    "groq:llama-3.3-70b-versatile", 0.4,
-                    "groq:llama-3.1-8b-instant", 0.2
-                ), reputationService);
-            case ADAPTIVE -> new LinUcbDecisionEngine(linucbAlpha, reputationService);
+            case WEIGHTED   -> new WeightedDecisionEngine(java.util.Collections.emptyMap(), reputationService);
+            case ADAPTIVE   -> new LinUcbDecisionEngine(linucbAlpha, reputationService,
+                                                         feedbackLogRepository, contextExtractor);
+            case FEDERATED  -> new FederatedLinUcbEngine(linucbAlpha, reputationService,
+                                                          tenantRegistry, stateRepository, objectMapper);
         };
 
-        log.info("Decision Engine initialized: strategy={}, implementation={}",
-                 strategy, engine.getClass().getSimpleName());
-        return engine;
+        log.info("DecisionEngineConfig: initial strategy={}, engine={}",
+                 strategy, initialEngine.getClass().getSimpleName());
+
+        return new RoutingEngineManager(
+            initialEngine,
+            linucbAlpha, staticProvider, staticModel,
+            reputationService, tenantRegistry,
+            stateRepository, objectMapper,
+            feedbackLogRepository, contextExtractor
+        );
     }
 }
